--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",  
     "mongoose": "^6.4.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "nodemon":"^1.3.3"
   }
 }
